--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -11,6 +11,10 @@
   </script>
 </div><!-- /.google-ads -->
 {% endif %}
-
+{% if site.cc %}
+<span><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>{{ site.time | date: '%Y' }} {{ site.owner.name }}. Powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> using the <a href="http://ncsu-libraries.github.io/jekyll-academic/" rel="nofollow">Jekyll Academic</a> theme.
+<br />Based on the <a href="https://mmistakes.github.io/minimal-mistakes/">Minimal Mistakes</a> theme developed by Michael Rose.</span>
+{% else  %}
 <span>&copy; {{ site.time | date: '%Y' }} {{ site.owner.name }}. Powered by <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> using the <a href="http://ncsu-libraries.github.io/jekyll-academic/" rel="nofollow">Jekyll Academic</a> theme.
 <br />Based on the <a href="https://mmistakes.github.io/minimal-mistakes/">Minimal Mistakes</a> theme developed by Michael Rose.</span>
+{% endif %}
