--- a/_includes/_cvhead.html
+++ b/_includes/_cvhead.html
@@ -36,6 +36,7 @@
 
 <link href='//fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700%7CPT+Serif:400,700,400italic' rel='stylesheet' type='text/css'>
 <!-- Icons -->
+<link rel="stylesheet" href="{{ site.url }}/assets/css/academicons/css/academicons.css"/>
 <!-- 16x16 -->
 <link rel="shortcut icon" href="{{ site.url }}/favicon.ico">
 <!-- 32x32 -->
