Update font-awesome to 5 with CDN

--- a/_includes/_cvhead.html
+++ b/_includes/_cvhead.html
@@ -33,6 +33,9 @@
 <!-- Modernizr -->
 <script src="{{ site.url }}/assets/js/vendor/modernizr-2.7.1.custom.min.js"></script>
 
+<!-- Font Awesome 5 -->
+<script defer src="https://use.fontawesome.com/releases/v5.0.3/js/all.js"></script>
+
 
 <link href='//fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700%7CPT+Serif:400,700,400italic' rel='stylesheet' type='text/css'>
 <!-- Icons -->
