move accents color options to config.yml

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,7 +12,8 @@ sitemap: false
 */
 
 // Partials
-@import "../accent";
+$highlightcolor: {{ site.highlight-color }};
+$lowlightcolor: {{ site.lowlight-color }};
 @import "variables";
 @import "grid";
 @import "mixins";
