--- a/assets/css/cvmain.scss
+++ b/assets/css/cvmain.scss
@@ -12,7 +12,8 @@ sitemap: false
 */
 
 // Partials
-@import "../accent";
+$highlightcolor: {{ site.highlight-color }};
+$lowlightcolor: {{ site.lowlight-color }};
 @import "resume";
 @import "variables";
 @import "grid";
