--- a/_sass/resume.scss
+++ b/_sass/resume.scss
@@ -1,5 +1,5 @@
 
-.cv html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+.resume html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -9,27 +9,27 @@
 }
 
 
-.cv article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+.resume article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
   display: block;
   }
 
-.cv blockquote, q {
+.resume blockquote, q {
   quotes: none;
   }
 
-.cv body {
+.resume body {
   font: normal normal 400;
   font-size: 100%;
 
 }
-.cv p {
+.resume p {
   position: relative;
   margin-right: 0;
   width: 100%;
 
 }
 
-.cv code {
+.resume code {
   font: normal normal;
   float: right;
   color: #000;
@@ -37,14 +37,14 @@
   text-indent: 0px;
 }
 
-.cv ul {
+.resume ul {
   position: relative;
   left: 33%;
   width: 65%;
   margin-bottom: 1.5em;
 }
 
-.cv ul{
+.resume ul{
       position: relative;
       left: 0;
       width: 100%;
@@ -52,27 +52,27 @@
   }
 
 
-.cv li ul {
+.resume li ul {
   position: relative;
   left: 0;
   width: 100%;
   margin-top: 0.25em;
   text-align: left;
 }
-.cv li {
+.resume li {
   margin-left: 2em;
 }
-.cv h1, h2, h3, h4 {
+.resume h1, h2, h3, h4 {
   font-weight: 400;
   }
 
-.cv h1 {
+.resume h1 {
   text-align: center;
   margin-bottom: 0px;
   color: $highlightcolor
 }
 
-.cv h2 {
+.resume h2 {
   font-size: 1.5em;
   color: $highlightcolor;
   position: relative;
@@ -80,11 +80,11 @@
   margin-top: 1.7em;
 }
 // Fix issue with the first content area floating up above border on print
-div#cv.cv{
+div#resume.resume{
   margin-top: 50px;
 }
 
-.cv h3 {
+.resume h3 {
   font-size: 1.25em;
   line-height: 2em;
   color: $lowlightcolor;
@@ -93,7 +93,7 @@ div#cv.cv{
   text-align: right;
   width: 30%;
 }
-.cv h4 {
+.resume h4 {
   font-size: 18px;
   margin-bottom: -25px;
   font-family: inherit;
