--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@
 <!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="en"><![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
   
-  <link rel="shortcut icon" type="image/png" href="sitelogo.png">
+  <link rel="shortcut icon" type="image/png" href="/images/sitelogo.png">
   
 <head>
 {% include _head.html %}
