--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -38,9 +38,9 @@
 <link rel="stylesheet" href="{{ site.url }}/assets/css/academicons/css/academicons.css"/>
 <!-- Icons -->
 <!-- 16x16 -->
-<link rel="shortcut icon" type="image/png" href="aldridgecaleb.github.io/images/AldPicNature.png">
+<link rel="shortcut icon" href="{{ site.url }}/favicon.ico">
 <!-- 32x32 -->
-<link rel="shortcut icon" type="image/png" href="aldridgecaleb.github.io/images/AldPicNature.png">
+<link rel="shortcut icon" href="{{ site.url }}/favicon.png">
 <!-- 57x57 (precomposed) for iPhone 3GS, pre-2011 iPod Touch and older Android devices -->
 <link rel="apple-touch-icon-precomposed" href="{{ site.url }}/images/apple-touch-icon-precomposed.png">
 <!-- 72x72 (precomposed) for 1st generation iPad, iPad 2 and iPad mini -->
