--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -1,9 +1,9 @@
 <div class="navigation-wrapper">
 	<div class="site-name">
 		{% if site.logo %}
-		<a href="{{ site.url }}/"><img src="{{ site.url }}/images/{{ site.logo }} "></a>
+		<a href="{{ site.github.url }}/"><img src="{{ site.github.url }}/images/{{ site.logo }} "></a>
 		{% else %}
-		<a href="{{ site.url }}/">{{ site.title }}</a>
+		<a href="{{ site.github.url }}/">{{ site.title }}</a>
 		{% endif %}
 	</div><!-- /.site-name -->
 	<div class="top-navigation">
@@ -13,7 +13,7 @@
 				    {% if link.url contains 'http' %}
 				        {% assign domain = '' %}
 				        {% else %}
-				        {% assign domain = site.url %}
+				        {% assign domain = site.github.url %}
 				    {% endif %}
 				    <li><a href="{{ domain }}{{ link.url }}" {% if link.url contains 'http' %}target="_blank"{% endif %}>{{ link.title }}</a></li>
 				{% endfor %}
