--- a/reveal.js/css/theme/source/blood.scss
+++ b/reveal.js/css/theme/source/blood.scss
@@ -1,6 +1,6 @@
 /**
  * Blood theme for reveal.js
- * Author: Walther https://github.com/Walther
+ * Author: Walther http://github.com/Walther
  *
  * Designed to be used with highlight.js theme
  * "monokai_sublime.css" available from
@@ -28,7 +28,6 @@ $backgroundColor: $coal;
 
 // Main text
 $mainFont: Ubuntu, 'sans-serif';
-$mainFontSize: 36px;
 $mainColor: #eee;
 
 // Headings
