--- a/reveal.js/css/theme/source/night.scss
+++ b/reveal.js/css/theme/source/night.scss
@@ -1,7 +1,7 @@
 /**
  * Black theme for reveal.js.
  *
- * Copyright (C) 2011-2012 Hakim El Hattab, https://hakim.se
+ * Copyright (C) 2011-2012 Hakim El Hattab, http://hakim.se
  */
 
 
@@ -27,7 +27,6 @@ $headingTextShadow: none;
 $headingLetterSpacing: -0.03em;
 $headingTextTransform: none;
 $selectionBackgroundColor: #e7ad52;
-$mainFontSize: 30px;
 
 
 // Theme template ------------------------------
